# SWE-RL-

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
ssr-studio/: .env.example  .gitignore  Dockerfile  README.md  demo.py  docker-compose.yml  pyproject.toml
ssr-studio/configs/: default.yaml
ssr-studio/examples/calculator/: __init__.py  calculator.py  test_calculator.py
ssr-studio/src/ssr_studio/: __init__.py  api.py  cli.py  config.py  database.py  model_gateway.py  models.py  orchestrator.py  sandbox.py  storage.py  tools.py  validator.py
ssr-studio/src/ssr_studio/agents/: __init__.py  injector.py  solver.py
ssr-studio/ui/: Dockerfile  package.json
ssr-studio/ui/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ssr-studio/ui/src/app/environments/: page.tsx
ssr-studio/ui/src/app/episodes/: page.tsx
ssr-studio/ui/src/app/episodes/[id]/: page.tsx
ssr-studio/ui/src/app/episodes/new/: page.tsx
ssr-studio/ui/src/app/metrics/: page.tsx
ssr-studio/ui/src/components/: StatsCard.tsx  StatusBadge.tsx
